# trading

./: README.md  pyproject.toml
.github/workflows/: ci.yml  no-reddit-guard.yml
config/: default.yaml
docs/: v2_1_plan.md
scripts/: check_dependency_policy.py
src/trading/: cli.py  config.py  main.py  setup.py
src/trading/agents/: director.py
src/trading/backtest/: __init__.py  harvester.py  runner.py
src/trading/core/: scheduler.py  self_heal.py  trade_gate.py
src/trading/data/: mcp_server.py  oracle_client.py  quota.py
src/trading/db/: models.py  session.py
src/trading/infra/: anthropic_client.py
src/trading/mcp/: registry.py  runtime.py
src/trading/schemas/: contracts.py
src/trading/state/: models.py
src/trading/utils/: __init__.py  time_provider.py
tests/: test_backtest_runner.py  test_data_mcp_server.py  test_director.py  test_main_batching.py  test_mcp_tools.py  test_oracle_client.py  test_prompt_compiler.py  test_scheduler.py  test_setup.py  test_state_models.py  test_time_provider.py  test_xml_extract.py
